feat: branding fonts, Roman numerals, sponsor reorder & equal grid
- Install Cormorant Infant (serif) and Neue Haas Grotesk (sans) as self-hosted fonts
- Replace Google Fonts fallback with proper @font-face declarations
- Add Roman numerals (I-X) for EN mode, keep Chinese numerals for CN mode
- Reorder sponsors: Rémy Martin > West Elm > Maison d'Etto > 25hours > Hudson Wilder
- Footer: 3-col CSS grid on mobile, 5-col on desktop for equal treatment
- Sponsors page: rebuilt with elegant spacing and centered last row

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <meta property="og:image" content="/assets/hero.png" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+SC:wght@400;600;700&family=Inter:wght@300;400;500&family=Playfair+Display:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+SC:wght@400;600;700&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="/css/tokens.css" />
   <link rel="stylesheet" href="/css/global.css" />
   <link rel="stylesheet" href="/css/landing.css" />
@@ -74,17 +74,17 @@
       <div class="footer__sponsors">
         <p class="footer__sponsors-label" data-en="With gratitude to our sponsors" data-cn="感谢我们的赞助商">With gratitude to our sponsors</p>
         <div class="footer__logos">
-          <a href="https://www.25hours-hotels.com" target="_blank" rel="noopener" class="footer__logo-link">
-            <img src="/assets/sponsors/25hours.png" alt="25hours Hotels" class="footer__logo" />
+          <a href="https://www.remymartin.com" target="_blank" rel="noopener" class="footer__logo-link">
+            <img src="/assets/sponsors/remymartin.png" alt="Rémy Martin" class="footer__logo" />
           </a>
           <a href="https://www.westelm.com" target="_blank" rel="noopener" class="footer__logo-link">
             <img src="/assets/sponsors/westelm.png" alt="West Elm" class="footer__logo" />
           </a>
-          <a href="https://www.remymartin.com" target="_blank" rel="noopener" class="footer__logo-link">
-            <img src="/assets/sponsors/remymartin.png" alt="Rémy Martin" class="footer__logo" />
-          </a>
           <a href="https://maisondetto.com" target="_blank" rel="noopener" class="footer__logo-link">
             <img src="/assets/sponsors/maisondetto.png" alt="Maison d'Etto" class="footer__logo" />
+          </a>
+          <a href="https://www.25hours-hotels.com" target="_blank" rel="noopener" class="footer__logo-link">
+            <img src="/assets/sponsors/25hours.png" alt="25hours Hotels" class="footer__logo" />
           </a>
           <a href="https://hudsonwilder.com" target="_blank" rel="noopener" class="footer__logo-link">
             <img src="/assets/sponsors/hudsonwilder.png" alt="Hudson Wilder" class="footer__logo" />
