feat: alchemist ii (organic arc, quantum nav, chroma detail)

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
           SOUND OFF
         </button>
         <button class="nav__lang" id="lang-toggle" aria-label="Toggle language">EN / 中</button>
+        <button class="nav__toggle" id="nav-toggle" aria-label="Menu">
+          <span></span><span></span>
+        </button>
       </div>
     </div>
   </nav>
