--- a/topic.html
+++ b/topic.html
@@ -23,6 +23,9 @@
         <a href="/sponsors.html" class="nav__link">赞助 Sponsors</a>
       </div>
       <button class="nav__lang" id="lang-toggle" aria-label="Toggle language">EN / 中</button>
+      <button class="nav__toggle" id="nav-toggle" aria-label="Menu">
+        <span></span><span></span>
+      </button>
     </div>
   </nav>
 
