fix: visual reset — restore hero image, flat #f4f0ce gold, styled intro, remove scroll chaos, unify background

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <source src="/assets/hero-mobile.mov" type="video/quicktime" />
         <source src="/assets/hero-mobile.mp4" type="video/mp4" />
       </video>
-      <img src="/assets/hero.png" alt="Fire Horse" class="hero__img" />
+      <img src="/hero_horse.png" alt="Fire Horse" class="hero__img" />
       <canvas id="particles" class="hero__particles"></canvas>
     </div>
     <div class="hero__content">
