feat: hero ritual sequence (Gather. Recollect. Align. Gallop.) + much bigger sponsor logos

--- a/index.html
+++ b/index.html
@@ -50,10 +50,13 @@
     </div>
     <div class="hero__content">
       <p class="hero__pre" data-en="Chelsea Salon Series · Volume I" data-cn="切尔西沙龙 · 第一辑">Chelsea Salon Series · Volume I</p>
-      <h1 class="hero__title">
-        <span class="hero__title-main">RECOLLECT</span>
-        <span class="hero__title-sub" data-en="The Year of the Fire Horse" data-cn="丙午火马年">The Year of the Fire Horse</span>
-      </h1>
+      <div class="hero__ritual">
+        <span class="hero__step hero__step--1">Gather.</span>
+        <span class="hero__step hero__step--highlight">Recollect.</span>
+        <span class="hero__step hero__step--3">Align.</span>
+        <span class="hero__step hero__step--4">Gallop.</span>
+      </div>
+      <span class="hero__title-sub" data-en="The Year of the Fire Horse" data-cn="丙午火马年">The Year of the Fire Horse</span>
       <p class="hero__date" data-en="February 16, 2026 · New York" data-cn="2026年2月16日 · 纽约">February 16, 2026 · New York</p>
       <div class="hero__scroll">
         <span data-en="Scroll to explore" data-cn="向下滚动">Scroll to explore</span>
