polish: hero ALL CAPS + deeper opacity, GSAP stagger entrance, per-sponsor logo sizing

--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
     <div class="hero__content">
       <p class="hero__pre" data-en="Chelsea Salon Series · Volume I" data-cn="切尔西沙龙 · 第一辑">Chelsea Salon Series · Volume I</p>
       <div class="hero__ritual">
-        <span class="hero__step hero__step--1">Gather.</span>
-        <span class="hero__step hero__step--highlight">Recollect.</span>
-        <span class="hero__step hero__step--3">Align.</span>
-        <span class="hero__step hero__step--4">Gallop.</span>
+        <span class="hero__step hero__step--1">GATHER.</span>
+        <span class="hero__step hero__step--highlight">RECOLLECT.</span>
+        <span class="hero__step hero__step--3">ALIGN.</span>
+        <span class="hero__step hero__step--4">GALLOP.</span>
       </div>
       <span class="hero__title-sub" data-en="The Year of the Fire Horse" data-cn="丙午火马年">The Year of the Fire Horse</span>
       <p class="hero__date" data-en="February 16, 2026 · New York" data-cn="2026年2月16日 · 纽约">February 16, 2026 · New York</p>
@@ -89,19 +89,19 @@
       <div class="footer__sponsors">
         <p class="footer__sponsors-label" data-en="With gratitude to our sponsors" data-cn="感谢我们的赞助商">With gratitude to our sponsors</p>
         <div class="footer__logos">
-          <a href="https://www.remymartin.com" target="_blank" rel="noopener" class="footer__logo-link">
+          <a href="https://www.remymartin.com" target="_blank" rel="noopener" class="footer__logo-link" id="sponsor-remy">
             <img src="/assets/sponsors/remymartin.png" alt="Rémy Martin" class="footer__logo" />
           </a>
-          <a href="https://www.westelm.com" target="_blank" rel="noopener" class="footer__logo-link">
+          <a href="https://www.westelm.com" target="_blank" rel="noopener" class="footer__logo-link" id="sponsor-westelm">
             <img src="/assets/sponsors/westelm.png" alt="West Elm" class="footer__logo" />
           </a>
-          <a href="https://maisondetto.com" target="_blank" rel="noopener" class="footer__logo-link">
+          <a href="https://maisondetto.com" target="_blank" rel="noopener" class="footer__logo-link" id="sponsor-maison">
             <img src="/assets/sponsors/maisondetto.png" alt="Maison d'Etto" class="footer__logo" />
           </a>
-          <a href="https://www.25hours-hotels.com" target="_blank" rel="noopener" class="footer__logo-link">
+          <a href="https://www.25hours-hotels.com" target="_blank" rel="noopener" class="footer__logo-link" id="sponsor-25hours">
             <img src="/assets/sponsors/25hours.png" alt="25hours Hotels" class="footer__logo" />
           </a>
-          <a href="https://hudsonwilder.com" target="_blank" rel="noopener" class="footer__logo-link">
+          <a href="https://hudsonwilder.com" target="_blank" rel="noopener" class="footer__logo-link" id="sponsor-hudson">
             <img src="/assets/sponsors/hudsonwilder.png" alt="Hudson Wilder" class="footer__logo" />
           </a>
         </div>
