--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
     <div class="hero__content">
       <p class="hero__pre" data-en="Chelsea Salon Series · Volume I" data-cn="切尔西沙龙 · 第一辑">Chelsea Salon Series · Volume I</p>
       <div class="hero__ritual">
-        <span class="hero__step hero__step--1">GATHER.</span>
-        <span class="hero__step hero__step--highlight">RECOLLECT.</span>
-        <span class="hero__step hero__step--3">ALIGN.</span>
-        <span class="hero__step hero__step--4">GALLOP.</span>
+        <span class="hero__step hero__step--1">GATHER</span>
+        <span class="hero__step hero__step--highlight">RECOLLECT</span>
+        <span class="hero__step hero__step--3">ALIGN</span>
+        <span class="hero__step hero__step--4">GALLOP</span>
       </div>
       <span class="hero__title-sub" data-en="The Year of the Fire Horse" data-cn="丙午火马年">The Year of the Fire Horse</span>
       <p class="hero__date" data-en="February 16, 2026 · New York" data-cn="2026年2月16日 · 纽约">February 16, 2026 · New York</p>
