polish: unify footer sponsors, fix narrative IDs, add story page, hero embers
- Fix narrative-data.ts ID mismatches (hk-taiwan→hktw, meaning→vision)
- Remove Sponsors nav tab from all pages, delete sponsors.html
- Unify sponsor footer across index, topic, menu, story pages
- Add 故事 Story page with horse image placeholder
- Rename nav: 菜单 Menu → 筵席 Nourishment
- Add scroll-triggered fire-spark embers at hero→intro transition
- Move footer CSS from landing.css to global.css

--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
       <a href="/" class="nav__brand">RECOLLECT</a>
       <div class="nav__links">
         <a href="#topics" class="nav__link">探索 Topics</a>
-        <a href="/menu.html" class="nav__link">菜单 Menu</a>
-        <a href="/sponsors.html" class="nav__link">赞助 Sponsors</a>
+        <a href="/menu.html" class="nav__link">筵席 Nourishment</a>
+        <a href="/story.html" class="nav__link">故事 Story</a>
       </div>
       <div style="display: flex; gap: 8px; align-items: center;">
         <button class="nav__lang" id="audio-toggle" aria-label="Toggle audio">
@@ -107,7 +107,7 @@
         </div>
       </div>
       <div class="footer__bottom">
-        <p class="footer__copy">© 2026 RECOLLECT. All rights reserved.</p>
+        <p class="footer__copy">a nolan project - to honor his father, made together with his extraordinary friends.</p>
       </div>
     </div>
   </footer>
