--- a/story.html
+++ b/story.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
-  <title>Menu — RECOLLECT</title>
+  <title>Our Story — RECOLLECT</title>
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+SC:wght@400;600;700&display=swap" rel="stylesheet" />
@@ -17,20 +17,19 @@
       <a href="/" class="nav__brand">RECOLLECT</a>
       <div class="nav__links">
         <a href="/#topics" class="nav__link">探索 Topics</a>
-        <a href="/menu.html" class="nav__link nav__link--active">筵席 Nourishment</a>
-        <a href="/story.html" class="nav__link">故事 Story</a>
+        <a href="/menu.html" class="nav__link">筵席 Nourishment</a>
+        <a href="/story.html" class="nav__link nav__link--active">故事 Story</a>
       </div>
     </div>
   </nav>
 
   <main style="padding: calc(var(--nav-h) + var(--sp-10)) var(--sp-4) var(--sp-10); min-height: 80vh; display: flex; align-items: center; justify-content: center;">
     <div class="container" style="text-align: center;">
-      <p style="font-family: var(--font-serif); font-size: clamp(2rem, 6vw, 3.5rem); font-weight: 700; color: var(--clr-gold); margin-bottom: var(--sp-3);">菜单</p>
-      <p style="font-family: var(--font-serif-en); font-size: var(--fs-lg); color: var(--clr-ivory); margin-bottom: var(--sp-6);">The Menu</p>
-      <p style="font-family: var(--font-sans); font-size: var(--fs-base); font-weight: 300; color: var(--clr-muted); line-height: 1.8; max-width: 420px; margin: 0 auto;">
-        The dinner menu will be revealed on the evening of the salon.
-        <br /><br />
-        <span style="color: var(--clr-gold);">February 16, 2026</span>
+      <img src="/hero_horse.png" alt="Fire Horse" style="max-width: 420px; width: 80%; margin: 0 auto var(--sp-8); opacity: 0.85; filter: drop-shadow(0 0 40px rgba(212, 56, 13, 0.3));" />
+      <p style="font-family: var(--font-serif); font-size: clamp(2rem, 6vw, 3.5rem); font-weight: 700; color: var(--clr-gold); margin-bottom: var(--sp-3);">故事</p>
+      <p style="font-family: var(--font-serif-en); font-size: var(--fs-lg); color: var(--clr-ivory); margin-bottom: var(--sp-6);">Our Story</p>
+      <p style="font-family: var(--font-sans); font-size: var(--fs-base); font-weight: 300; color: var(--clr-muted); line-height: 1.8; max-width: 480px; margin: 0 auto;">
+        Why we made this. Who we are. Coming soon.
       </p>
     </div>
   </main>
