--- a/topic.html
+++ b/topic.html
@@ -19,8 +19,8 @@
       <a href="/" class="nav__brand">RECOLLECT</a>
       <div class="nav__links">
         <a href="/#topics" class="nav__link">探索 Topics</a>
-        <a href="/menu.html" class="nav__link">菜单 Menu</a>
-        <a href="/sponsors.html" class="nav__link">赞助 Sponsors</a>
+        <a href="/menu.html" class="nav__link">筵席 Nourishment</a>
+        <a href="/story.html" class="nav__link">故事 Story</a>
       </div>
       <button class="nav__lang" id="lang-toggle" aria-label="Toggle language">EN / 中</button>
       <button class="nav__toggle" id="nav-toggle" aria-label="Menu">
@@ -83,8 +83,28 @@
   <!-- ═══ FOOTER ═══ -->
   <footer class="footer" id="footer">
     <div class="container">
+      <div class="footer__sponsors">
+        <p class="footer__sponsors-label" data-en="With gratitude to our sponsors" data-cn="感谢我们的赞助商">With gratitude to our sponsors</p>
+        <div class="footer__logos">
+          <a href="https://www.remymartin.com" target="_blank" rel="noopener" class="footer__logo-link" id="sponsor-remy">
+            <img src="/assets/sponsors/remymartin.png" alt="Rémy Martin" class="footer__logo" />
+          </a>
+          <a href="https://www.westelm.com" target="_blank" rel="noopener" class="footer__logo-link" id="sponsor-westelm">
+            <img src="/assets/sponsors/westelm.png" alt="West Elm" class="footer__logo" />
+          </a>
+          <a href="https://maisondetto.com" target="_blank" rel="noopener" class="footer__logo-link" id="sponsor-maison">
+            <img src="/assets/sponsors/maisondetto.png" alt="Maison d'Etto" class="footer__logo" />
+          </a>
+          <a href="https://www.25hours-hotels.com" target="_blank" rel="noopener" class="footer__logo-link" id="sponsor-25hours">
+            <img src="/assets/sponsors/25hours.png" alt="25hours Hotels" class="footer__logo" />
+          </a>
+          <a href="https://hudsonwilder.com" target="_blank" rel="noopener" class="footer__logo-link" id="sponsor-hudson">
+            <img src="/assets/sponsors/hudsonwilder.png" alt="Hudson Wilder" class="footer__logo" />
+          </a>
+        </div>
+      </div>
       <div class="footer__bottom">
-        <p class="footer__copy">© 2026 RECOLLECT. All rights reserved.</p>
+        <p class="footer__copy">a nolan project - to honor his father, made together with his extraordinary friends.</p>
       </div>
     </div>
   </footer>
