--- a/menu.html
+++ b/menu.html
@@ -20,6 +20,9 @@
         <a href="/menu.html" class="nav__link nav__link--active">筵席 Nourishment</a>
         <a href="/story.html" class="nav__link">故事 Story</a>
       </div>
+      <button class="nav__toggle" id="nav-toggle" aria-label="Menu">
+        <span></span><span></span>
+      </button>
     </div>
   </nav>
 
@@ -62,5 +65,6 @@
       </div>
     </div>
   </footer>
+  <script type="module" src="/src/nav-init.ts"></script>
 </body>
 </html>
