--- a/story.html
+++ b/story.html
@@ -60,7 +60,7 @@
         </div>
       </div>
       <div class="footer__bottom">
-        <p class="footer__copy">a nolan project - to honor his father, made together with his extraordinary friends.</p>
+        <p class="footer__copy">a nolan project,<br>— to honor his father,<br>made together,<br>with his <span style="letter-spacing:0.15em">EXTRA</span>ordinary friends.</p>
       </div>
     </div>
   </footer>
