enhance: cinematic hero→intro transition with gold divider + parallax reveal
- Extended hero gradient to 45vh with multi-stop blending
- Added gold line + glow dot transition zone between hero/intro
- Intro text fades up on scroll with IntersectionObserver
- Negative margins overlap transition zone for seamless flow

--- a/index.html
+++ b/index.html
@@ -65,6 +65,13 @@
     </div>
   </section>
 
+  <!-- ═══ TRANSITION ZONE ═══ -->
+  <div class="transition-zone" id="transition-zone">
+    <div class="transition-zone__line"></div>
+    <div class="transition-zone__glow"></div>
+    <div class="transition-zone__line"></div>
+  </div>
+
   <!-- ═══ INTRO ═══ -->
   <section class="intro" id="intro">
     <div class="container">
