--- a/story.html
+++ b/story.html
@@ -4,6 +4,13 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
   <title>Our Story — RECOLLECT</title>
+  <meta property="og:title" content="RECOLLECT — The Year of the Fire Horse" />
+  <meta property="og:description" content="A Chelsea Salon exploring the Lunar New Year through ten cultural lenses." />
+  <meta property="og:image" content="https://recollect-nowherelands-projects.vercel.app/assets/og-image.jpg" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:image" content="https://recollect-nowherelands-projects.vercel.app/assets/og-image.jpg" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+SC:wght@400;600;700&display=swap" rel="stylesheet" />
