--- a/index.html
+++ b/index.html
@@ -7,15 +7,15 @@
   <meta name="description" content="A Chelsea Salon exploring the Lunar New Year through ten cultural lenses. February 16, 2026 · New York." />
   <meta property="og:title" content="RECOLLECT — The Year of the Fire Horse" />
   <meta property="og:description" content="A Chelsea Salon exploring the Lunar New Year through ten cultural lenses." />
-  <meta property="og:image" content="https://recollect-nowherelands-projects.vercel.app/assets/og-image.jpg" />
+  <meta property="og:image" content="https://chelsea-salon.com/recollect2026/assets/og-image.jpg" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://recollect-nowherelands-projects.vercel.app/" />
+  <meta property="og:url" content="https://chelsea-salon.com/recollect2026/" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="RECOLLECT — The Year of the Fire Horse" />
   <meta name="twitter:description" content="A Chelsea Salon exploring the Lunar New Year through ten cultural lenses." />
-  <meta name="twitter:image" content="https://recollect-nowherelands-projects.vercel.app/assets/og-image.jpg" />
+  <meta name="twitter:image" content="https://chelsea-salon.com/recollect2026/assets/og-image.jpg" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+SC:wght@400;600;700&display=swap" rel="stylesheet" />
