feat: clean URL routing for chelsea-salon.com/recollect2026
- /recollect2026/origins, /evolution, /hktw, etc. → topic pages
- /recollect2026/story → story page
- /recollect2026/menu → menu page
- All nav links updated to use clean paths
- topic.ts reads slug from URL path with ?t= fallback
- Prev/next navigation uses clean URLs

--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
   <!-- ═══ NAVIGATION ═══ -->
   <nav class="nav" id="nav">
     <div class="nav__inner">
-      <a href="/" class="nav__brand">RECOLLECT</a>
+      <a href="/recollect2026" class="nav__brand">RECOLLECT</a>
       <div class="nav__links">
-        <a href="#topics" class="nav__link">探索 Topics</a>
-        <a href="/menu.html" class="nav__link">筵席 Nourishment</a>
-        <a href="/story.html" class="nav__link">故事 Story</a>
+        <a href="/recollect2026#topics" class="nav__link">探索 Topics</a>
+        <a href="/recollect2026/menu" class="nav__link">筵席 Nourishment</a>
+        <a href="/recollect2026/story" class="nav__link">故事 Story</a>
       </div>
       <div style="display: flex; gap: 8px; align-items: center;">
         <button class="nav__lang" id="audio-toggle" aria-label="Toggle audio">
