--- a/story.html
+++ b/story.html
@@ -21,11 +21,11 @@
 <body>
   <nav class="nav nav--scrolled" id="nav">
     <div class="nav__inner">
-      <a href="/" class="nav__brand">RECOLLECT</a>
+      <a href="/recollect2026" class="nav__brand">RECOLLECT</a>
       <div class="nav__links">
-        <a href="/#topics" class="nav__link">探索 Topics</a>
-        <a href="/menu.html" class="nav__link">筵席 Nourishment</a>
-        <a href="/story.html" class="nav__link nav__link--active">故事 Story</a>
+        <a href="/recollect2026#topics" class="nav__link">探索 Topics</a>
+        <a href="/recollect2026/menu" class="nav__link">筵席 Nourishment</a>
+        <a href="/recollect2026/story" class="nav__link nav__link--active">故事 Story</a>
       </div>
       <button class="nav__toggle" id="nav-toggle" aria-label="Menu">
         <span></span><span></span>
