--- a/topic.html
+++ b/topic.html
@@ -23,11 +23,11 @@
   <!-- ═══ NAVIGATION ═══ -->
   <nav class="nav nav--scrolled" id="nav">
     <div class="nav__inner">
-      <a href="/" class="nav__brand">RECOLLECT</a>
+      <a href="/recollect2026" class="nav__brand">RECOLLECT</a>
       <div class="nav__links">
-        <a href="/#topics" class="nav__link">探索 Topics</a>
-        <a href="/menu.html" class="nav__link">筵席 Nourishment</a>
-        <a href="/story.html" class="nav__link">故事 Story</a>
+        <a href="/recollect2026#topics" class="nav__link">探索 Topics</a>
+        <a href="/recollect2026/menu" class="nav__link">筵席 Nourishment</a>
+        <a href="/recollect2026/story" class="nav__link">故事 Story</a>
       </div>
       <button class="nav__lang" id="lang-toggle" aria-label="Toggle language">EN / 中</button>
       <button class="nav__toggle" id="nav-toggle" aria-label="Menu">
@@ -39,7 +39,7 @@
   <!-- ═══ TOPIC HEADER ═══ -->
   <header class="topic-header" id="topic-header">
     <div class="container">
-      <a href="/" class="topic-header__back">
+      <a href="/recollect2026" class="topic-header__back">
         <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.5"><path d="M19 12H5M12 19l-7-7 7-7"/></svg>
         <span data-en="Back to all topics" data-cn="返回所有主题">Back to all topics</span>
       </a>
