--- a/topic.html
+++ b/topic.html
@@ -90,6 +90,12 @@
   <!-- ═══ FOOTER ═══ -->
   <footer class="footer" id="footer">
     <div class="container">
+      <div class="footer__partner">
+        <p class="footer__partner-label" data-en="In partnership with" data-cn="合作伙伴">In partnership with</p>
+        <a href="https://www.thefifthhouse.com" target="_blank" rel="noopener">
+          <img src="/assets/t5h-logo.svg" alt="The Fifth House" class="footer__partner-logo" />
+        </a>
+      </div>
       <div class="footer__sponsors">
         <p class="footer__sponsors-label" data-en="With gratitude to our sponsors" data-cn="感谢我们的赞助商">With gratitude to our sponsors</p>
         <div class="footer__logos">
